--- a/DeepLearn/05-梯度下降.md
+++ b/DeepLearn/05-梯度下降.md
@@ -75,4 +75,4 @@ plt.plot(x,y,c = 'r',label = 'predict',linestyle = ':')
 plt.legend()
 ```
 
-![img](https://gitee.com/nmdfzf404/Image-hosting/raw/master/2021/download.png)
+![img](https://img-1257284600.cos.ap-beijing.myqcloud.com/2021/download.png)
