--- a/HardWare/51MCU/02-单片机例程.md
+++ b/HardWare/51MCU/02-单片机例程.md
@@ -29,11 +29,11 @@ sort:
 
 1. 仿真
 
-![image-20200330184624331](https://gitee.com/nmdfzf404/Image-hosting/raw/master/20200711105841.png)
+![image-20200330184624331](https://img-1257284600.cos.ap-beijing.myqcloud.com/2020/20200711105841.png)
 
 2. 设置断点
 
-![image-20200328195141119](https://gitee.com/nmdfzf404/Image-hosting/raw/master/20200711105844.png)
+![image-20200328195141119](https://img-1257284600.cos.ap-beijing.myqcloud.com/2020/20200711105844.png)
 
 ## 例程
 
