--- a/HardWare/51MCU/05-中断.md
+++ b/HardWare/51MCU/05-中断.md
@@ -5,9 +5,9 @@ sort:
 
 # 中断
 
-![image-20200904203225205](https://gitee.com/nmdfzf404/Image-hosting/raw/master/2020/20200904203225.png)
+![image-20200904203225205](https://img-1257284600.cos.ap-beijing.myqcloud.com/2020/20200904203225.png)
 
-![image-20200904202234877](https://gitee.com/nmdfzf404/Image-hosting/raw/master/2020/20200904202234.png)
+![image-20200904202234877](https://img-1257284600.cos.ap-beijing.myqcloud.com/2020/20200904202234.png)
 
 ## 外部中断
 
