--- a/HardWare/EleMod/MPU6050.md
+++ b/HardWare/EleMod/MPU6050.md
@@ -9,7 +9,7 @@ sort:
 >
 > 能获取器件三个加速度分量和三个旋转角速度
 
-![img](https://gitee.com/nmdfzf404/Image-hosting/raw/master/2021/a980247c82e3dba5ff39e3c6bd896ed4_b.jpg)
+![img](https://img-1257284600.cos.ap-beijing.myqcloud.com/2021/a980247c82e3dba5ff39e3c6bd896ed4_b.jpg)
 
 ## Arduino
 
