--- a/HardWare/Esp8266/00-Esp8266入门.md
+++ b/HardWare/Esp8266/00-Esp8266入门.md
@@ -13,7 +13,7 @@ sort:
 
 ## NodeMCU
 
-![esp8266_devkit_horizontal-001](https://gitee.com/nmdfzf404/Image-hosting/raw/master/2020/20201230180958.png)
+![esp8266_devkit_horizontal-001](https://img-1257284600.cos.ap-beijing.myqcloud.com/2020/20201230180958.png)
 
 ## 配置
 
