--- a/HardWare/STM32/00-STM32配置.md
+++ b/HardWare/STM32/00-STM32配置.md
@@ -9,7 +9,7 @@ sort:
 >
 > 另外需要有 keil 开发 51 的基础
 
-![image-20201031193923530](https://gitee.com/nmdfzf404/Image-hosting/raw/master/2020/20201031193923.png)
+![image-20201031193923530](https://img-1257284600.cos.ap-beijing.myqcloud.com/2020/20201031193923.png)
 
 ## CubeIDE
 
@@ -41,7 +41,7 @@ sort:
 >
 > 位置：`C:\Keil_v5\ARM\Startup\ST\STM32F10x`
 
-![image-20201105162533095](https://gitee.com/nmdfzf404/Image-hosting/raw/master/2020/20201105162533.png)
+![image-20201105162533095](https://img-1257284600.cos.ap-beijing.myqcloud.com/2020/20201105162533.png)
 
 ### 编译
 
@@ -55,7 +55,7 @@ sort:
 
 1. `Eidt -> Configuration`
 
-2. ![image-20201031194927018](https://gitee.com/nmdfzf404/Image-hosting/raw/master/2020/20201031194927.png)
+2. ![image-20201031194927018](https://img-1257284600.cos.ap-beijing.myqcloud.com/2020/20201031194927.png)
 
 > 编译时报错：`"core_cm3.h": No such file or directory`
 
@@ -79,21 +79,21 @@ int main()
 
 > 生成 HEX 文件
 >
-> ![image-20201031212332360](https://gitee.com/nmdfzf404/Image-hosting/raw/master/2020/20201031212332.png)
+> ![image-20201031212332360](https://img-1257284600.cos.ap-beijing.myqcloud.com/2020/20201031212332.png)
 
-![image-20201031205124736](https://gitee.com/nmdfzf404/Image-hosting/raw/master/2020/20201031205124.png)
+![image-20201031205124736](https://img-1257284600.cos.ap-beijing.myqcloud.com/2020/20201031205124.png)
 
 > BOOT0 跳线接 1
 >
 > BOOT01 跳线接 0
 
-![](https://gitee.com/nmdfzf404/Image-hosting/raw/master/2020/20201031205835.png)
+![](https://img-1257284600.cos.ap-beijing.myqcloud.com/2020/20201031205835.png)
 
 ![在这里插入图片描述](https://img-blog.csdnimg.cn/20200523094925600.png?x-oss-process=image/watermark,type_ZmFuZ3poZW5naGVpdGk,shadow_10,text_aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L2Rvd25hbmRkdXNr,size_16,color_FFFFFF,t_70)
 
 > 使用 ISP 程序烧录
 
-![image-20201031210626063](https://gitee.com/nmdfzf404/Image-hosting/raw/master/2020/20201031210626.png)
+![image-20201031210626063](https://img-1257284600.cos.ap-beijing.myqcloud.com/2020/20201031210626.png)
 
 烧录成功啦，当然这个程序没有任何作用…
 
@@ -101,12 +101,12 @@ int main()
 
 > 按照引脚定义接上四根线
 
-![image-20201101184227427](https://gitee.com/nmdfzf404/Image-hosting/raw/master/2020/20201101184227.png)
+![image-20201101184227427](https://img-1257284600.cos.ap-beijing.myqcloud.com/2020/20201101184227.png)
 
-![image-20201101184245763](https://gitee.com/nmdfzf404/Image-hosting/raw/master/2020/20201101184245.png)
+![image-20201101184245763](https://img-1257284600.cos.ap-beijing.myqcloud.com/2020/20201101184245.png)
 
-![image-20201101184311119](https://gitee.com/nmdfzf404/Image-hosting/raw/master/2020/20201101184311.png)
+![image-20201101184311119](https://img-1257284600.cos.ap-beijing.myqcloud.com/2020/20201101184311.png)
 
 ## 使用 SWD 调试接口
 
-![image-20201105161213345](https://gitee.com/nmdfzf404/Image-hosting/raw/master/2020/20201105161213.png)
+![image-20201105161213345](https://img-1257284600.cos.ap-beijing.myqcloud.com/2020/20201105161213.png)
