--- a/HardWare/STM32/01-STM32基础.md
+++ b/HardWare/STM32/01-STM32基础.md
@@ -11,7 +11,7 @@ sort:
 >
 > f4xx 系列使用 m4 内核
 
-![存储器功能分类](https://gitee.com/nmdfzf404/Image-hosting/raw/master/2021/2020031709560628.png)
+![存储器功能分类](https://img-1257284600.cos.ap-beijing.myqcloud.com/2021/2020031709560628.png)
 
 - Block0/1：用于片内的 FLASH
 - Block2：分配给了片上外设，如 GPIO、I2C、SPI
