--- a/HardWare/STM32/02-寄存器点灯.md
+++ b/HardWare/STM32/02-寄存器点灯.md
@@ -37,11 +37,11 @@ void SystemInit(void)
 
 > `0x4001 1000`是 GPIO_C 的基地址，偏移地址为`0x04`
 
-![image-20201105164046145](https://gitee.com/nmdfzf404/Image-hosting/raw/master/2020/20201105164046.png)
+![image-20201105164046145](https://img-1257284600.cos.ap-beijing.myqcloud.com/2020/20201105164046.png)
 
 > 低寄存器：`GPIOC_CRL`
 
-![image-20201105221909067](https://gitee.com/nmdfzf404/Image-hosting/raw/master/2020/20201105221909.png)
+![image-20201105221909067](https://img-1257284600.cos.ap-beijing.myqcloud.com/2020/20201105221909.png)
 
 > 每 4 位控制一个引脚，
 >
@@ -51,11 +51,11 @@ void SystemInit(void)
 >
 > 所以还有高寄存器
 
-![image-20201105220813208](https://gitee.com/nmdfzf404/Image-hosting/raw/master/2020/20201105220813.png)
+![image-20201105220813208](https://img-1257284600.cos.ap-beijing.myqcloud.com/2020/20201105220813.png)
 
 > 点亮 LED 使用 10MHz 输出模式+推挽输出
 
-![image-20201105165149321](https://gitee.com/nmdfzf404/Image-hosting/raw/master/2020/20201105165149.png)
+![image-20201105165149321](https://img-1257284600.cos.ap-beijing.myqcloud.com/2020/20201105165149.png)
 
 > 想要操作的寄存器是 GPIO_C13
 >
@@ -65,7 +65,7 @@ void SystemInit(void)
 >
 > 向右移动 20 位并取反进行与操作，操作后 20-23 位变成 0
 
-![image-20201105220850636](https://gitee.com/nmdfzf404/Image-hosting/raw/master/2020/20201105220850.png)
+![image-20201105220850636](https://img-1257284600.cos.ap-beijing.myqcloud.com/2020/20201105220850.png)
 
 > 高电平：`*(unsigned int*)0x4001100C |=(1<<13);`
 >
@@ -75,15 +75,15 @@ void SystemInit(void)
 
 > stm32 每使用一个引脚都需要启用时钟
 
-![P28](https://gitee.com/nmdfzf404/Image-hosting/raw/master/2020/20201105211118.png)
+![P28](https://img-1257284600.cos.ap-beijing.myqcloud.com/2020/20201105211118.png)
 
-![image-20201105211326724](https://gitee.com/nmdfzf404/Image-hosting/raw/master/2020/20201105211326.png)
+![image-20201105211326724](https://img-1257284600.cos.ap-beijing.myqcloud.com/2020/20201105211326.png)
 
 > 确定地址为`0x4002 1018`
 
 **操作地址**
 
-![image-20201105211810137](https://gitee.com/nmdfzf404/Image-hosting/raw/master/2020/20201105211810.png)
+![image-20201105211810137](https://img-1257284600.cos.ap-beijing.myqcloud.com/2020/20201105211810.png)
 
 > `*(unsigned int*)0x40021018 |=(1<<4)`
 >
@@ -95,7 +95,7 @@ void SystemInit(void)
 
 > stm32f10x.h
 >
-> ![image-20201106102356645](https://gitee.com/nmdfzf404/Image-hosting/raw/master/2020/20201106102403.png)
+> ![image-20201106102356645](https://img-1257284600.cos.ap-beijing.myqcloud.com/2020/20201106102403.png)
 
 ```c
 // 寄存器起始地址
@@ -206,11 +206,11 @@ void SystemInit(void)
 >
 > 低 16 位用于置 1
 
-![image-20201106224649258](https://gitee.com/nmdfzf404/Image-hosting/raw/master/2020/20201106224649.png)
+![image-20201106224649258](https://img-1257284600.cos.ap-beijing.myqcloud.com/2020/20201106224649.png)
 
 > 用 BRR 清除端口
 
-![image-20201106225742037](https://gitee.com/nmdfzf404/Image-hosting/raw/master/2020/20201106225742.png)
+![image-20201106225742037](https://img-1257284600.cos.ap-beijing.myqcloud.com/2020/20201106225742.png)
 
 > 分别为：`main.c` `stm32f10x.h` `stm32f10x_gpio.c` `smt32f10x_gpio.h`
 
