--- a/HardWare/STM32/06-外部中断.md
+++ b/HardWare/STM32/06-外部中断.md
@@ -9,7 +9,7 @@ sort:
 
    > 高速时钟，选择外部晶振
 
-![image-20210623161806839](https://gitee.com/nmdfzf404/Image-hosting/raw/master/2021/image-20210623161806839.png)
+![image-20210623161806839](https://img-1257284600.cos.ap-beijing.myqcloud.com/2021/image-20210623161806839.png)
 
 2. 配置引脚：
 
@@ -29,7 +29,7 @@ sort:
 
    > 将``RCC/EXIT interrupts`使能，并设置优先级为 1(一会儿会用到中断)
    >
-   > ![image-20210623173131332](https://gitee.com/nmdfzf404/Image-hosting/raw/master/2021/image-20210623173131332.png)
+   > ![image-20210623173131332](https://img-1257284600.cos.ap-beijing.myqcloud.com/2021/image-20210623173131332.png)
 
 ### 编写代码
 
