--- a/HardWare/STM32/07-串口通信.md
+++ b/HardWare/STM32/07-串口通信.md
@@ -9,7 +9,7 @@ sort:
 
 2. 设置串口`Connectivity -> HSART1 -> Asynchrono`, 并开启中断
 
-   ![image-20210323110647598](https://gitee.com/nmdfzf404/Image-hosting/raw/master/2021/image-20210323110647598.png)
+   ![image-20210323110647598](https://img-1257284600.cos.ap-beijing.myqcloud.com/2021/image-20210323110647598.png)
 
 ## 代码
 
