--- a/HardWare/Theory/01-三极管.md
+++ b/HardWare/Theory/01-三极管.md
@@ -5,8 +5,8 @@ sort:
 
 ### 三极管放大器
 
-![image-20210622203336520](https://gitee.com/nmdfzf404/Image-hosting/raw/master/2021/20210622203336.png)
+![image-20210622203336520](https://img-1257284600.cos.ap-beijing.myqcloud.com/2021/20210622203336.png)
 
-![image-20210622203350044](https://gitee.com/nmdfzf404/Image-hosting/raw/master/2021/20210622203350.png)
+![image-20210622203350044](https://img-1257284600.cos.ap-beijing.myqcloud.com/2021/20210622203350.png)
 
-![image-20210622203414137](https://gitee.com/nmdfzf404/Image-hosting/raw/master/2021/20210622203414.png)
+![image-20210622203414137](https://img-1257284600.cos.ap-beijing.myqcloud.com/2021/20210622203414.png)
