--- a/Home/大一总结.md
+++ b/Home/大一总结.md
@@ -15,13 +15,13 @@ visible: true
 
   > [前后端源码](https://gitee.com/nmdfzf404/ql2020kpi)
 
-  <img src="https://gitee.com/nmdfzf404/Image-hosting/raw/master/2021/20210410204945.png" style="zoom: 50%;" />
+  <img src="https://img-1257284600.cos.ap-beijing.myqcloud.com/2021/20210410204945.png" style="zoom: 50%;" />
 
 - Electron
 
   > [CameraHelper](https://github.com/fzf404/CameraHelper)
 
-  <img src="https://gitee.com/nmdfzf404/Image-hosting/raw/master/2021/202109212033181.png" alt="image-20210921203322939" style="zoom:50%;" />
+  <img src="https://img-1257284600.cos.ap-beijing.myqcloud.com/2021/202109212033181.png" alt="image-20210921203322939" style="zoom:50%;" />
 
 - ReactHooks + AntD
 
@@ -29,7 +29,7 @@ visible: true
   >
   > [源码](https://gitee.com/nmdfzf404/company-work01)
 
-  <img src="https://gitee.com/nmdfzf404/Image-hosting/raw/master/2021/20210621104207.png" alt="image-20210305133016461" style="zoom:50%;" />
+  <img src="https://img-1257284600.cos.ap-beijing.myqcloud.com/2021/20210621104207.png" alt="image-20210305133016461" style="zoom:50%;" />
 
 - Vue + Bootstrap
 
@@ -37,7 +37,7 @@ visible: true
   >
   > [前后端源码](https://gitee.com/nmdfzf404/company-work01)
 
-  ![image-20210921211154380](https://gitee.com/nmdfzf404/Image-hosting/raw/master/2021/202109212111747.png)
+  ![image-20210921211154380](https://img-1257284600.cos.ap-beijing.myqcloud.com/2021/202109212111747.png)
 
 - Vue3 + Vite + NaiveUI
 
@@ -75,7 +75,7 @@ visible: true
   >
   > 源码未开放...
 
-  <img src="https://gitee.com/nmdfzf404/Image-hosting/raw/master/2021/20210602201233.jpg" style="zoom: 67%;" />
+  <img src="https://img-1257284600.cos.ap-beijing.myqcloud.com/2021/20210602201233.jpg" style="zoom: 67%;" />
 
 - Three.js
 
@@ -263,7 +263,7 @@ visible: true
 >
 > [MiniSys 源码](https://github.com/fzf404/MiniSys)
 
-![image-20210204214823035](https://gitee.com/nmdfzf404/Image-hosting/raw/master/2021/image-20210204214823035.png)
+![image-20210204214823035](https://img-1257284600.cos.ap-beijing.myqcloud.com/2021/image-20210204214823035.png)
 
 ### 机器学习
 
@@ -338,7 +338,7 @@ visible: true
   >
   > [强化学习走迷宫](https://github.com/fzf404/Old_Code/tree/main/Python/RL/maze)
 
-  ![image-20210922210015748](https://gitee.com/nmdfzf404/Image-hosting/raw/master/2021/202109222100783.png)
+  ![image-20210922210015748](https://img-1257284600.cos.ap-beijing.myqcloud.com/2021/202109222100783.png)
 
 - 目标跟踪
 
@@ -346,7 +346,7 @@ visible: true
   >
   > [AutoTrfcCtrl](https://gitee.com/nmdfzf404/auto-trfc-ctrl/tree/master/)
 
-  ![image-20210921220521155](https://gitee.com/nmdfzf404/Image-hosting/raw/master/2021/202109212205534.png)
+  ![image-20210921220521155](https://img-1257284600.cos.ap-beijing.myqcloud.com/2021/202109212205534.png)
 
 - DouZero
 
@@ -356,15 +356,15 @@ visible: true
 
 > Qt5 写的 XP 扫雷外挂
 
-<img src="https://gitee.com/nmdfzf404/Image-hosting/raw/master/2021/20210504113309.png" alt="image-20210504113307955" style="zoom:80%;" />
+<img src="https://img-1257284600.cos.ap-beijing.myqcloud.com/2021/20210504113309.png" alt="image-20210504113307955" style="zoom:80%;" />
 
-<img src="https://gitee.com/nmdfzf404/Image-hosting/raw/master/2021/20210504112935.png" style="zoom:80%;" />
+<img src="https://img-1257284600.cos.ap-beijing.myqcloud.com/2021/20210504112935.png" style="zoom:80%;" />
 
 ### 安卓
 
 > 一个老师的项目，500 块钱
 
-<img src="https://gitee.com/nmdfzf404/Image-hosting/raw/master/2021/202109212223132.jpg" alt="img" style="zoom: 50%;" />
+<img src="https://img-1257284600.cos.ap-beijing.myqcloud.com/2021/202109212223132.jpg" alt="img" style="zoom: 50%;" />
 
 ### 硬件
 
