--- a/Lang/Assem/01-最小系统.md
+++ b/Lang/Assem/01-最小系统.md
@@ -29,9 +29,9 @@ sort:
 >
 > 剩余 0 填充
 
-![image-20201222223509183](https://gitee.com/nmdfzf404/Image-hosting/raw/master/2020/20201222223509.png)
+![image-20201222223509183](https://img-1257284600.cos.ap-beijing.myqcloud.com/2020/20201222223509.png)
 
-![image-20201222223522180](https://gitee.com/nmdfzf404/Image-hosting/raw/master/2020/20201222223522.png)
+![image-20201222223522180](https://img-1257284600.cos.ap-beijing.myqcloud.com/2020/20201222223522.png)
 
 > 改名`hellofzf.img`
 >
@@ -39,7 +39,7 @@ sort:
 >
 > 新建软盘并使用`hellofzf.img`镜像文件
 
-![image-20201222223447680](https://gitee.com/nmdfzf404/Image-hosting/raw/master/2020/20201222223447.png)
+![image-20201222223447680](https://img-1257284600.cos.ap-beijing.myqcloud.com/2020/20201222223447.png)
 
 ### Nasm
 
@@ -158,4 +158,4 @@ db 0x55,0xaa
 >
 > 启动模式选 Legacy
 
-![img](https://gitee.com/nmdfzf404/Image-hosting/raw/master/2020/20201228160105.jpg)
+![img](https://img-1257284600.cos.ap-beijing.myqcloud.com/2020/20201228160105.jpg)
