--- a/Lang/Assem/02-显示信息.md
+++ b/Lang/Assem/02-显示信息.md
@@ -182,7 +182,7 @@ db 0x55,0xaa
 
 ## 效果
 
-![image-20201228225714906](https://gitee.com/nmdfzf404/Image-hosting/raw/master/2020/20201228225714.png)
+![image-20201228225714906](https://img-1257284600.cos.ap-beijing.myqcloud.com/2020/20201228225714.png)
 
 ## 转载程序
 
