--- a/Lang/Assem/06-32Bit.md
+++ b/Lang/Assem/06-32Bit.md
@@ -5,7 +5,7 @@ sort:
 
 ## 8086 寄存器
 
-![img](https://gitee.com/nmdfzf404/Image-hosting/raw/master/2021/v2-706b8593baced5da11a556f4c300f226_b.jpg)
+![img](https://img-1257284600.cos.ap-beijing.myqcloud.com/2021/v2-706b8593baced5da11a556f4c300f226_b.jpg)
 
 ## GDT
 
@@ -13,7 +13,7 @@ sort:
 >
 > 段寄存器更名为段选择子
 
-![img](https://gitee.com/nmdfzf404/Image-hosting/raw/master/2021/v2-a95b7148b2767b12fe63da93f43d08bb_b.jpg)
+![img](https://img-1257284600.cos.ap-beijing.myqcloud.com/2021/v2-a95b7148b2767b12fe63da93f43d08bb_b.jpg)
 
 ### GDTR 寄存器
 
@@ -80,8 +80,8 @@ over3:
     jmp $
 ```
 
-![image-20210204214823035](https://gitee.com/nmdfzf404/Image-hosting/raw/master/2021/image-20210204214823035.png)
+![image-20210204214823035](https://img-1257284600.cos.ap-beijing.myqcloud.com/2021/image-20210204214823035.png)
 
 ## 32 位下的显示
 
-![img](https://gitee.com/nmdfzf404/Image-hosting/raw/master/2021/v2-b349937ce14e9a561dd2b8a705aebb69_b.jpg)
+![img](https://img-1257284600.cos.ap-beijing.myqcloud.com/2021/v2-b349937ce14e9a561dd2b8a705aebb69_b.jpg)
