--- a/Lang/CPP/10-Qt入门.md
+++ b/Lang/CPP/10-Qt入门.md
@@ -40,7 +40,7 @@ RC_ICONS = led.ico
 
 2. 打开`*.ui`文件，设计布局
 
-![image-20210429212434541](https://gitee.com/nmdfzf404/Image-hosting/raw/master/2021/20210429212441.png)
+![image-20210429212434541](https://img-1257284600.cos.ap-beijing.myqcloud.com/2021/20210429212441.png)
 
 3. 头文件引入库`*.h`
 
@@ -132,4 +132,4 @@ void MainWindow::on_closeLight_clicked()
 >
 > 打开`Qt for Desktop`，运行`windeployqt xx.exe`
 
-![image-20210429215913826](https://gitee.com/nmdfzf404/Image-hosting/raw/master/2021/20210429215915.png)
+![image-20210429215913826](https://img-1257284600.cos.ap-beijing.myqcloud.com/2021/20210429215915.png)
