--- a/Security/Crack/01-基础知识.md
+++ b/Security/Crack/01-基础知识.md
@@ -21,7 +21,7 @@ sort:
 
 ## 寄存器
 
-<img src="https://gitee.com/nmdfzf404/Image-hosting/raw/master/2021/202111301535147.jpg" alt="图片" style="zoom: 67%;" />
+<img src="https://img-1257284600.cos.ap-beijing.myqcloud.com/2021/202111301535147.jpg" alt="图片" style="zoom: 67%;" />
 
 - **32 位通用寄存器**
 
