--- a/Security/Crack/04-堆栈图.md
+++ b/Security/Crack/04-堆栈图.md
@@ -3,10 +3,10 @@ title: 04-堆栈图
 sort:
 -->
 
-![1732325-20190908225642149-2106556117](https://gitee.com/nmdfzf404/Image-hosting/raw/master/2020/20201228180744.png)
+![1732325-20190908225642149-2106556117](https://img-1257284600.cos.ap-beijing.myqcloud.com/2020/20201228180744.png)
 
-![img](https://gitee.com/nmdfzf404/Image-hosting/raw/master/2021/20210614230520.png)
+![img](https://img-1257284600.cos.ap-beijing.myqcloud.com/2021/20210614230520.png)
 
-![img](https://gitee.com/nmdfzf404/Image-hosting/raw/master/2021/20210614230527.png)
+![img](https://img-1257284600.cos.ap-beijing.myqcloud.com/2021/20210614230527.png)
 
-![img](https://gitee.com/nmdfzf404/Image-hosting/raw/master/2021/20210614230533.png)
+![img](https://img-1257284600.cos.ap-beijing.myqcloud.com/2021/20210614230533.png)
