--- a/Security/Crack/07-PE结构.md
+++ b/Security/Crack/07-PE结构.md
@@ -7,7 +7,7 @@ sort:
 
 ## 硬盘与内存
 
-![image-20201023193155503](https://gitee.com/nmdfzf404/Image-hosting/raw/master/2020/20201023193202.png)
+![image-20201023193155503](https://img-1257284600.cos.ap-beijing.myqcloud.com/2020/20201023193202.png)
 
 > 程序在硬盘与内存中的不同
 >
@@ -27,7 +27,7 @@ sort:
 
 > 一个 exe 可能会存在多个 PEheader
 
-<img src="https://gitee.com/nmdfzf404/Image-hosting/raw/master/2020/20201023194859.jpg" alt="PE结构"  />
+<img src="https://img-1257284600.cos.ap-beijing.myqcloud.com/2020/20201023194859.jpg" alt="PE结构"  />
 
 > 在头部找出下一区块的偏移：E0
 >
@@ -35,7 +35,7 @@ sort:
 
 ### Dos 头
 
-![image-20201119213759089](https://gitee.com/nmdfzf404/Image-hosting/raw/master/2020/20201119213806.png)
+![image-20201119213759089](https://img-1257284600.cos.ap-beijing.myqcloud.com/2020/20201119213806.png)
 
 | 标记           | 用途                                |
 | -------------- | ----------------------------------- |
@@ -44,7 +44,7 @@ sort:
 
 ### 标准 PE 头
 
-![image-20201119213824240](https://gitee.com/nmdfzf404/Image-hosting/raw/master/2020/20201119213824.png)
+![image-20201119213824240](https://img-1257284600.cos.ap-beijing.myqcloud.com/2020/20201119213824.png)
 
 | 标记                      | 用途                                                                                         |
 | ------------------------- | -------------------------------------------------------------------------------------------- |
@@ -56,7 +56,7 @@ sort:
 
 > 最多 E0 字节
 
-![image-20201119213839642](https://gitee.com/nmdfzf404/Image-hosting/raw/master/2020/20201119213839.png)
+![image-20201119213839642](https://img-1257284600.cos.ap-beijing.myqcloud.com/2020/20201119213839.png)
 
 | 标记                      | 用途                                                                                     |
 | ------------------------- | ---------------------------------------------------------------------------------------- |
