--- a/Security/Crack/08-节表.md
+++ b/Security/Crack/08-节表.md
@@ -5,7 +5,7 @@ sort:
 
 ## 节表
 
-![image-20201119214225176](https://gitee.com/nmdfzf404/Image-hosting/raw/master/2020/20201125164150.png)
+![image-20201119214225176](https://img-1257284600.cos.ap-beijing.myqcloud.com/2020/20201125164150.png)
 
 > `RAM`
 >
