--- a/Security/Crack/09-插入代码.md
+++ b/Security/Crack/09-插入代码.md
@@ -19,15 +19,15 @@ sort:
 
 2. 进入断点
 
-   ![image-20201201211815930](https://gitee.com/nmdfzf404/Image-hosting/raw/master/2020/20201201211822.png)
+   ![image-20201201211815930](https://img-1257284600.cos.ap-beijing.myqcloud.com/2020/20201201211822.png)
 
 3. 地址`77D507EA`
 
-   ![image-20201201212140476](https://gitee.com/nmdfzf404/Image-hosting/raw/master/2020/20201201212140.png)
+   ![image-20201201212140476](https://img-1257284600.cos.ap-beijing.myqcloud.com/2020/20201201212140.png)
 
 4. 查看传入数据`6A 00 *3`
 
-   ![image-20201201213937319](https://gitee.com/nmdfzf404/Image-hosting/raw/master/2020/20201201213937.png)
+   ![image-20201201213937319](https://img-1257284600.cos.ap-beijing.myqcloud.com/2020/20201201213937.png)
 
 ### PETool
 
@@ -35,13 +35,13 @@ sort:
 >
 > 查找第一节表位置
 
-![image-20201201212446478](https://gitee.com/nmdfzf404/Image-hosting/raw/master/2020/20201201212446.png)
+![image-20201201212446478](https://img-1257284600.cos.ap-beijing.myqcloud.com/2020/20201201212446.png)
 
 > 查找`EntryPoint`与`ImageBase`
 >
 > 查看内存偏移与修改程序入口
 
-![image-20201201212902311](https://gitee.com/nmdfzf404/Image-hosting/raw/master/2020/20201201212902.png)
+![image-20201201212902311](https://img-1257284600.cos.ap-beijing.myqcloud.com/2020/20201201212902.png)
 
 ## HexEditor
 
@@ -75,6 +75,6 @@ sort:
 
 > 改了这么多，最后会弹出来什么呢？
 
-![image-20201201214640822](https://gitee.com/nmdfzf404/Image-hosting/raw/master/2020/20201201214640.png)
+![image-20201201214640822](https://img-1257284600.cos.ap-beijing.myqcloud.com/2020/20201201214640.png)
 
 **就是它，在程序运行前会弹出一个默认的 MessageBox**
