--- a/Security/Crack/10-扫雷注入.md
+++ b/Security/Crack/10-扫雷注入.md
@@ -29,7 +29,7 @@ LRESULT CALLBACK WindowProc(
 >
 > 右键->断点->条件(Shift+F2)：`edx==WM_COMMAND`
 
-![image-20210428224637995](https://gitee.com/nmdfzf404/Image-hosting/raw/master/2021/20210428224646.png)
+![image-20210428224637995](https://img-1257284600.cos.ap-beijing.myqcloud.com/2021/20210428224646.png)
 
 3. 查找菜单选项对应的参数`EBP+10`
 
@@ -39,7 +39,7 @@ LRESULT CALLBACK WindowProc(
 >
 > 高级：0x020B
 
-![image-20210429151417779](https://gitee.com/nmdfzf404/Image-hosting/raw/master/2021/20210429151425.png)
+![image-20210429151417779](https://img-1257284600.cos.ap-beijing.myqcloud.com/2021/20210429151425.png)
 
 4. 使用 CE 查找地址
 
@@ -57,7 +57,7 @@ push 0x0009013A	; hwnd
 call 0x01001BC9	; 调用处理函数
 ```
 
-![image-20210429152827679](https://gitee.com/nmdfzf404/Image-hosting/raw/master/2021/20210429152858.png)
+![image-20210429152827679](https://img-1257284600.cos.ap-beijing.myqcloud.com/2021/20210429152858.png)
 
 6. CE 查内存
 
@@ -71,7 +71,7 @@ call 0x01001BC9	; 调用处理函数
 >
 > 雷数地址：`0x01005330`
 
-![](https://gitee.com/nmdfzf404/Image-hosting/raw/master/2021/20210504112952.png)
+![](https://img-1257284600.cos.ap-beijing.myqcloud.com/2021/20210504112952.png)
 
 ## 调用 WinAPI 开发外挂
 
@@ -113,4 +113,4 @@ int new_mines_num = new_mines.toInt();
 ::PostMessage(hWnd, WM_LBUTTONUP, 0, *(int *)boxXY);
 ```
 
-![](https://gitee.com/nmdfzf404/Image-hosting/raw/master/2021/20210504112935.png)
+![](https://img-1257284600.cos.ap-beijing.myqcloud.com/2021/20210504112935.png)
