--- a/HardWare/Theory/02-RC电路.md
+++ b/HardWare/Theory/02-RC电路.md
@@ -5,14 +5,14 @@ sort:
 
 ### RC 电路
 
-![image-20210622203512199](https://gitee.com/nmdfzf404/Image-hosting/raw/master/2021/20210622203512.png)
+![image-20210622203512199](https://img-1257284600.cos.ap-beijing.myqcloud.com/2021/20210622203512.png)
 
-![image-20210622203527073](https://gitee.com/nmdfzf404/Image-hosting/raw/master/2021/20210622203527.png)
+![image-20210622203527073](https://img-1257284600.cos.ap-beijing.myqcloud.com/2021/20210622203527.png)
 
-![image-20210622203546300](https://gitee.com/nmdfzf404/Image-hosting/raw/master/2021/20210622203546.png)
+![image-20210622203546300](https://img-1257284600.cos.ap-beijing.myqcloud.com/2021/20210622203546.png)
 
-![image-20210622203554532](https://gitee.com/nmdfzf404/Image-hosting/raw/master/2021/20210622203554.png)
+![image-20210622203554532](https://img-1257284600.cos.ap-beijing.myqcloud.com/2021/20210622203554.png)
 
 #### 倍压电路
 
-![image-20210622203620584](https://gitee.com/nmdfzf404/Image-hosting/raw/master/2021/20210622203620.png)
+![image-20210622203620584](https://img-1257284600.cos.ap-beijing.myqcloud.com/2021/20210622203620.png)
