⚡️ 杂七杂八的更新

--- a/HardWare/Esp8266/00-Esp8266入门.md
+++ b/HardWare/Esp8266/00-Esp8266入门.md
@@ -3,26 +3,26 @@ title: 00-Esp8266入门
 sort:
 -->
 
-# Esp8266 入门
+## Vscode
 
-## 01s
+- 编辑器：`Vscode`
+- 插件：`PlatformIO`
+- Board：`NodeMCU 1.0`
 
-## 12F
+## LED
 
-![img](https://img2018.cnblogs.com/blog/1502586/201906/1502586-20190605075223754-2034335090.png)
+```cpp
+#include <Arduino.h>
 
-## NodeMCU
+void setup() {
+  // put your setup code here, to run once:
+  pinMode(LED_BUILTIN, OUTPUT);
+}
 
-![esp8266_devkit_horizontal-001](https://img-1257284600.cos.ap-beijing.myqcloud.com/2020/20201230180958.png)
+void loop() {
+  // put your main code here, to run repeatedly:
+  delay(500);
+  digitalWrite(LED_BUILTIN,!digitalRead(LED_BUILTIN));
+}
+```
 
-## 配置
-
-> 安装驱动：CH340
->
-> 开发板管理器网址：http://arduino.esp8266.com/stable/package_esp8266com_index.json
-
-## SSD1306-I2C
-
-> SCL-D1
->
-> SDA-D2
