:construction_worker: Github Action

--- a/Frame/4-Vue/11-Vue3.md
+++ b/Frame/4-Vue/11-Vue3.md
@@ -113,6 +113,13 @@ stopWatch()
 watchEffect(() => {
   document.documentElement.setAttribute('class', theme.value)
 })
+
+// 另一种方法
+watch: {
+  user() {
+    this.initGithubData()
+  },
+},
 ```
 
 ### 触发父组件方法
