--- a/Home/大一总结.md
+++ b/Home/大一总结.md
@@ -7,9 +7,9 @@ visible: true
 
 - 前端三件套
 
-  > [我的首页](https://www.fzf404.top/)
+  > [我的首页](https://www.fzf404.art/)
   >
-  > [新首页-施工中](https://pre.fzf404.top/)
+  > [新首页-施工中](https://pre.fzf404.art/)
 
 - Bootstrap + Jquery
 
@@ -25,7 +25,7 @@ visible: true
 
 - ReactHooks + AntD
 
-  > [Tabox](https://tab.fzf404.top/)
+  > [Tabox](https://tab.fzf404.art/)
   >
   > [源码](https://gitee.com/nmdfzf404/company-work01)
 
@@ -41,7 +41,7 @@ visible: true
 
 - Vue3 + Vite + NaiveUI
 
-  > [作品推荐](http://favor.fzf404.top/)
+  > [作品推荐](http://favor.fzf404.art/)
   >
   > [源码](https://github.com/fzf404/favor)
 
@@ -79,7 +79,7 @@ visible: true
 
 - Three.js
 
-  > [旋转立方体](https://demo.fzf404.top/three.js/)
+  > [旋转立方体](https://demo.fzf404.art/three.js/)
   >
   > [源码](https://github.com/fzf404/demo/tree/main/three.js)
 
@@ -197,27 +197,27 @@ visible: true
   		book string `form:"book"`
   		price int64 `form:"price"`
   	}
-  
+
   	addResp {
   		ok bool `json:"ok"`
   	}
   )
-  
+
   type (
   	checkReq {
   		book string `form:"book"`
   	}
-  
+
   	checkResp {
   		found bool `json:"found"`
   		price int64 `json:"price"`
   	}
   )
-  
+
   service bookstore-api {
   	@handler AddHandler
   	get /add (addReq) returns (addResp)
-  
+
   	@handler CheckHandler
   	get /check (checkReq) returns (checkResp)
   }
@@ -245,13 +245,13 @@ visible: true
 
 - K8S
 
-  > 了解一下[K8S](https://note.fzf404.top/#/Command/Server/K8S)
+  > 了解一下[K8S](https://note.fzf404.art/#/Command/Server/K8S)
 
 - 尝试了一堆好用的工具
 
   > i3wm、tmux、nvim...
 
-- [Shell 编程](https://note.fzf404.top/#/Command/Linux/10-Shell%E7%BC%96%E7%A8%8B)
+- [Shell 编程](https://note.fzf404.art/#/Command/Linux/10-Shell%E7%BC%96%E7%A8%8B)
 
 ## 其他
 
@@ -271,7 +271,7 @@ visible: true
 
   > 简单了解下
   >
-  > [OpenCV](https://note.fzf404.top/#/Python/7.Vision/50-OpenCV)
+  > [OpenCV](https://note.fzf404.art/#/Python/7.Vision/50-OpenCV)
 
 - MNIST
 
@@ -384,7 +384,7 @@ visible: true
 
 - 新生通识课
 
-  > [share](https://share.fzf404.top/)
+  > [share](https://share.fzf404.art/)
 
 - 工作室服务器重置
 
