--- a/Home/大一总结.md
+++ b/Home/大一总结.md
@@ -7,7 +7,7 @@ visible: true
 
 - 前端三件套
 
-  > [我的首页](https://www.fzf404.art/)
+  > [我的首页](https://fzf404.art/)
   >
   > [新首页-施工中](https://pre.fzf404.art/)
 
